# marimo-altair-scratch

./: pyproject.toml
src/scratch/: plot_something.py
